@@ -1,10 +1,24 @@
+import net.fortuna.ical4j.model.property.Status;
+
 public class Project extends Event{
+    private Status status;
     private OurDateTime deadline;    //date and time of project deadline
     private boolean isFinished = false;     // boolean value that tells if the project is finished
 
-    public Project(OurDateTime dateTime, String title, String description, OurDateTime deadline) {
-        super(dateTime, title, description);
+    public Project(String title, String description, OurDateTime deadline, Status status) {
+        super(null, title, description);
         this.deadline = deadline;
+        this.status = status;
+        setFinished(status == Status.VTODO_COMPLETED);
+    }
+
+    public Status getStatus() {
+        return status;
+    }
+
+    public void setStatus(Status status) {
+        this.status = status;
+        setFinished(status == Status.VTODO_COMPLETED);
     }
 
     public OurDateTime getDeadline() { return deadline; }
@@ -43,13 +57,12 @@ public class Project extends Event{
 
     @Override
     public String toString() {
-        return """
-            Project:
-                dateTime: %s
-                title: %s
-                description: %s
-                deadline: %s
-                isFinished: %s
-            """.formatted(getDateTime(), getTitle(), getDescription(), deadline, isFinished);
+        return String.format("""
+        Project:
+            title: %s
+            description: %s
+            deadline: %s
+            status: %s
+        """, getTitle(), getDescription(), getDeadline(), getStatus().getValue());
     }
 }
